discussion/kv_engine/141072/141072_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41300: wip

Change-Id: I3cf393f4d5ba3b67cf32bf8b6a4db835c419fd36

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-11-27 07:20:25.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-27 07:46:42.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32150/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_stream_test.cc(2916): error C2660: "DcpConsumer::systemEvent": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32150/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27723/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33:
error: too few arguments to function call, expected 7, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27723/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5928/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33: error: too few arguments to function call, expected 7, have 1 [clang-diagnostic-error]
    consumer->systemEvent(opaque);
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/consumer.h:214:5: note: "systemEvent" declared here
    ENGINE_ERROR_CODE systemEvent(uint32_t opaque,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5928/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33:
error: too few arguments to function call, expected 7, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5928/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7380/ : FAILURE

Compile error at [2020-11-27T07:27:12.745Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33:
error: no matching function for call to ?MockDcpConsumer::systemEvent(const uint32_t&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6452/ : FAILURE

Compile error at [2020-11-27T07:23:42.452Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33:
error: too few arguments to function call, expected 7, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6452/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7767/ : FAILURE

Compile error at [2020-11-27T07:23:46.102Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33:
error: too few arguments to function call, expected 7, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7767/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7486/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15307/ : FAILURE

Compile error at [2020-11-27T07:39:03.059Z] ../kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:2916:33:
error: too few arguments to function call, expected 7, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15307/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4462/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-01-07 09:30:12.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
